generated/LALGGrammarParser.py
# Generated from LALGGrammar.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class LALGGrammarParser ( Parser ):

    grammarFileName = "LALGGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "','", "'procedure'", "':'", "'begin'", 
                     "'end'", "'if'", "'then'", "'else'", "'while'", "'do'", 
                     "'+'", "'-'", "'or'", "'*'", "'div'", "'and'", "'not'", 
                     "<INVALID>", "'var'", "'program'", "<INVALID>", "<INVALID>", 
                     "'('", "')'", "<INVALID>", "<INVALID>", "':='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "PALAVRA_RES", 
                      "VARIAVEL", "PROGRAMA", "OP_LOG", "OP_ARIT", "ABREPARENT", 
                      "FECHAPARENT", "PONTO", "TIPO_SIMPLES", "ATRIBUICAO", 
                      "NUMINT", "NUMREAL", "ENT_SAIDA", "IDENTIFICADOR", 
                      "COMENTARIO_COM_BARRA", "COMENTARIO_COM_PARENTESES", 
                      "WS", "OP_REL" ]

    RULE_programa = 0
    RULE_bloco = 1
    RULE_parteDeclaracaoVariaveis = 2
    RULE_declaracaoVariaveis = 3
    RULE_tipoSimples = 4
    RULE_listaIdentificadores = 5
    RULE_parteDeclaracaoSubRotinas = 6
    RULE_declaracaoProcedimento = 7
    RULE_parametrosFormais = 8
    RULE_secaoParametrosFormais = 9
    RULE_comandoComposto = 10
    RULE_comando = 11
    RULE_atribuicao = 12
    RULE_chamadaProcedimento = 13
    RULE_comandoCondicional = 14
    RULE_comandoRepetitivo = 15
    RULE_expressao = 16
    RULE_expressaoSimples = 17
    RULE_termo = 18
    RULE_fator = 19
    RULE_variavel = 20
    RULE_listaExpressoes = 21

    ruleNames =  [ "programa", "bloco", "parteDeclaracaoVariaveis", "declaracaoVariaveis", 
                   "tipoSimples", "listaIdentificadores", "parteDeclaracaoSubRotinas", 
                   "declaracaoProcedimento", "parametrosFormais", "secaoParametrosFormais", 
                   "comandoComposto", "comando", "atribuicao", "chamadaProcedimento", 
                   "comandoCondicional", "comandoRepetitivo", "expressao", 
                   "expressaoSimples", "termo", "fator", "variavel", "listaExpressoes" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    PALAVRA_RES=19
    VARIAVEL=20
    PROGRAMA=21
    OP_LOG=22
    OP_ARIT=23
    ABREPARENT=24
    FECHAPARENT=25
    PONTO=26
    TIPO_SIMPLES=27
    ATRIBUICAO=28
    NUMINT=29
    NUMREAL=30
    ENT_SAIDA=31
    IDENTIFICADOR=32
    COMENTARIO_COM_BARRA=33
    COMENTARIO_COM_PARENTESES=34
    WS=35
    OP_REL=36

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAMA(self):
            return self.getToken(LALGGrammarParser.PROGRAMA, 0)

        def IDENTIFICADOR(self):
            return self.getToken(LALGGrammarParser.IDENTIFICADOR, 0)

        def bloco(self):
            return self.getTypedRuleContext(LALGGrammarParser.BlocoContext,0)


        def EOF(self):
            return self.getToken(LALGGrammarParser.EOF, 0)

        def getRuleIndex(self):
            return LALGGrammarParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = LALGGrammarParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.match(LALGGrammarParser.PROGRAMA)
            self.state = 45
            self.match(LALGGrammarParser.IDENTIFICADOR)
            self.state = 46
            self.match(LALGGrammarParser.T__0)
            self.state = 47
            self.bloco()
            self.state = 48
            self.match(LALGGrammarParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlocoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parteDeclaracaoVariaveis(self):
            return self.getTypedRuleContext(LALGGrammarParser.ParteDeclaracaoVariaveisContext,0)


        def parteDeclaracaoSubRotinas(self):
            return self.getTypedRuleContext(LALGGrammarParser.ParteDeclaracaoSubRotinasContext,0)


        def comandoComposto(self):
            return self.getTypedRuleContext(LALGGrammarParser.ComandoCompostoContext,0)


        def getRuleIndex(self):
            return LALGGrammarParser.RULE_bloco

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloco" ):
                listener.enterBloco(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloco" ):
                listener.exitBloco(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBloco" ):
                return visitor.visitBloco(self)
            else:
                return visitor.visitChildren(self)




    def bloco(self):

        localctx = LALGGrammarParser.BlocoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_bloco)
        try:
            self.state = 61
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 50
                self.parteDeclaracaoVariaveis()
                self.state = 51
                self.parteDeclaracaoSubRotinas()
                self.state = 52
                self.comandoComposto()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 54
                self.parteDeclaracaoVariaveis()
                self.state = 55
                self.comandoComposto()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 57
                self.parteDeclaracaoSubRotinas()
                self.state = 58
                self.comandoComposto()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 60
                self.comandoComposto()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParteDeclaracaoVariaveisContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracaoVariaveis(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LALGGrammarParser.DeclaracaoVariaveisContext)
            else:
                return self.getTypedRuleContext(LALGGrammarParser.DeclaracaoVariaveisContext,i)


        def getRuleIndex(self):
            return LALGGrammarParser.RULE_parteDeclaracaoVariaveis

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParteDeclaracaoVariaveis" ):
                listener.enterParteDeclaracaoVariaveis(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParteDeclaracaoVariaveis" ):
                listener.exitParteDeclaracaoVariaveis(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParteDeclaracaoVariaveis" ):
                return visitor.visitParteDeclaracaoVariaveis(self)
            else:
                return visitor.visitChildren(self)




    def parteDeclaracaoVariaveis(self):

        localctx = LALGGrammarParser.ParteDeclaracaoVariaveisContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_parteDeclaracaoVariaveis)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.declaracaoVariaveis()
            self.state = 68
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 64
                    self.match(LALGGrammarParser.T__0)
                    self.state = 65
                    self.declaracaoVariaveis() 
                self.state = 70
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 71
            self.match(LALGGrammarParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracaoVariaveisContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipoSimples(self):
            return self.getTypedRuleContext(LALGGrammarParser.TipoSimplesContext,0)


        def listaIdentificadores(self):
            return self.getTypedRuleContext(LALGGrammarParser.ListaIdentificadoresContext,0)


        def getRuleIndex(self):
            return LALGGrammarParser.RULE_declaracaoVariaveis

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracaoVariaveis" ):
                listener.enterDeclaracaoVariaveis(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracaoVariaveis" ):
                listener.exitDeclaracaoVariaveis(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracaoVariaveis" ):
                return visitor.visitDeclaracaoVariaveis(self)
            else:
                return visitor.visitChildren(self)




    def declaracaoVariaveis(self):

        localctx = LALGGrammarParser.DeclaracaoVariaveisContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declaracaoVariaveis)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.tipoSimples()
            self.state = 74
            self.listaIdentificadores()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoSimplesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TIPO_SIMPLES(self):
            return self.getToken(LALGGrammarParser.TIPO_SIMPLES, 0)

        def getRuleIndex(self):
            return LALGGrammarParser.RULE_tipoSimples

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipoSimples" ):
                listener.enterTipoSimples(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipoSimples" ):
                listener.exitTipoSimples(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipoSimples" ):
                return visitor.visitTipoSimples(self)
            else:
                return visitor.visitChildren(self)




    def tipoSimples(self):

        localctx = LALGGrammarParser.TipoSimplesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_tipoSimples)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(LALGGrammarParser.TIPO_SIMPLES)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListaIdentificadoresContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFICADOR(self, i:int=None):
            if i is None:
                return self.getTokens(LALGGrammarParser.IDENTIFICADOR)
            else:
                return self.getToken(LALGGrammarParser.IDENTIFICADOR, i)

        def getRuleIndex(self):
            return LALGGrammarParser.RULE_listaIdentificadores

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListaIdentificadores" ):
                listener.enterListaIdentificadores(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListaIdentificadores" ):
                listener.exitListaIdentificadores(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListaIdentificadores" ):
                return visitor.visitListaIdentificadores(self)
            else:
                return visitor.visitChildren(self)




    def listaIdentificadores(self):

        localctx = LALGGrammarParser.ListaIdentificadoresContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_listaIdentificadores)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(LALGGrammarParser.IDENTIFICADOR)
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LALGGrammarParser.T__1:
                self.state = 79
                self.match(LALGGrammarParser.T__1)
                self.state = 80
                self.match(LALGGrammarParser.IDENTIFICADOR)
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParteDeclaracaoSubRotinasContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracaoProcedimento(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LALGGrammarParser.DeclaracaoProcedimentoContext)
            else:
                return self.getTypedRuleContext(LALGGrammarParser.DeclaracaoProcedimentoContext,i)


        def getRuleIndex(self):
            return LALGGrammarParser.RULE_parteDeclaracaoSubRotinas

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParteDeclaracaoSubRotinas" ):
                listener.enterParteDeclaracaoSubRotinas(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParteDeclaracaoSubRotinas" ):
                listener.exitParteDeclaracaoSubRotinas(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParteDeclaracaoSubRotinas" ):
                return visitor.visitParteDeclaracaoSubRotinas(self)
            else:
                return visitor.visitChildren(self)




    def parteDeclaracaoSubRotinas(self):

        localctx = LALGGrammarParser.ParteDeclaracaoSubRotinasContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_parteDeclaracaoSubRotinas)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LALGGrammarParser.T__2:
                self.state = 86
                self.declaracaoProcedimento()
                self.state = 87
                self.match(LALGGrammarParser.T__0)
                self.state = 93
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracaoProcedimentoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFICADOR(self):
            return self.getToken(LALGGrammarParser.IDENTIFICADOR, 0)

        def parametrosFormais(self):
            return self.getTypedRuleContext(LALGGrammarParser.ParametrosFormaisContext,0)


        def bloco(self):
            return self.getTypedRuleContext(LALGGrammarParser.BlocoContext,0)


        def getRuleIndex(self):
            return LALGGrammarParser.RULE_declaracaoProcedimento

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracaoProcedimento" ):
                listener.enterDeclaracaoProcedimento(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracaoProcedimento" ):
                listener.exitDeclaracaoProcedimento(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracaoProcedimento" ):
                return visitor.visitDeclaracaoProcedimento(self)
            else:
                return visitor.visitChildren(self)




    def declaracaoProcedimento(self):

        localctx = LALGGrammarParser.DeclaracaoProcedimentoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_declaracaoProcedimento)
        try:
            self.state = 104
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 94
                self.match(LALGGrammarParser.T__2)
                self.state = 95
                self.match(LALGGrammarParser.IDENTIFICADOR)
                self.state = 96
                self.parametrosFormais()
                self.state = 97
                self.match(LALGGrammarParser.T__0)
                self.state = 98
                self.bloco()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 100
                self.match(LALGGrammarParser.T__2)
                self.state = 101
                self.match(LALGGrammarParser.IDENTIFICADOR)
                self.state = 102
                self.match(LALGGrammarParser.T__0)
                self.state = 103
                self.bloco()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametrosFormaisContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ABREPARENT(self):
            return self.getToken(LALGGrammarParser.ABREPARENT, 0)

        def secaoParametrosFormais(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LALGGrammarParser.SecaoParametrosFormaisContext)
            else:
                return self.getTypedRuleContext(LALGGrammarParser.SecaoParametrosFormaisContext,i)


        def FECHAPARENT(self):
            return self.getToken(LALGGrammarParser.FECHAPARENT, 0)

        def getRuleIndex(self):
            return LALGGrammarParser.RULE_parametrosFormais

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParametrosFormais" ):
                listener.enterParametrosFormais(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParametrosFormais" ):
                listener.exitParametrosFormais(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParametrosFormais" ):
                return visitor.visitParametrosFormais(self)
            else:
                return visitor.visitChildren(self)




    def parametrosFormais(self):

        localctx = LALGGrammarParser.ParametrosFormaisContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_parametrosFormais)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(LALGGrammarParser.ABREPARENT)
            self.state = 107
            self.secaoParametrosFormais()
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LALGGrammarParser.T__0:
                self.state = 108
                self.match(LALGGrammarParser.T__0)
                self.state = 109
                self.secaoParametrosFormais()
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 115
            self.match(LALGGrammarParser.FECHAPARENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SecaoParametrosFormaisContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIAVEL(self):
            return self.getToken(LALGGrammarParser.VARIAVEL, 0)

        def listaIdentificadores(self):
            return self.getTypedRuleContext(LALGGrammarParser.ListaIdentificadoresContext,0)


        def IDENTIFICADOR(self):
            return self.getToken(LALGGrammarParser.IDENTIFICADOR, 0)

        def getRuleIndex(self):
            return LALGGrammarParser.RULE_secaoParametrosFormais

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSecaoParametrosFormais" ):
                listener.enterSecaoParametrosFormais(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSecaoParametrosFormais" ):
                listener.exitSecaoParametrosFormais(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSecaoParametrosFormais" ):
                return visitor.visitSecaoParametrosFormais(self)
            else:
                return visitor.visitChildren(self)




    def secaoParametrosFormais(self):

        localctx = LALGGrammarParser.SecaoParametrosFormaisContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_secaoParametrosFormais)
        try:
            self.state = 126
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LALGGrammarParser.VARIAVEL]:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.match(LALGGrammarParser.VARIAVEL)
                self.state = 118
                self.listaIdentificadores()
                self.state = 119
                self.match(LALGGrammarParser.T__3)
                self.state = 120
                self.match(LALGGrammarParser.IDENTIFICADOR)
                pass
            elif token in [LALGGrammarParser.IDENTIFICADOR]:
                self.enterOuterAlt(localctx, 2)
                self.state = 122
                self.listaIdentificadores()
                self.state = 123
                self.match(LALGGrammarParser.T__3)
                self.state = 124
                self.match(LALGGrammarParser.IDENTIFICADOR)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandoCompostoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LALGGrammarParser.ComandoContext)
            else:
                return self.getTypedRuleContext(LALGGrammarParser.ComandoContext,i)


        def getRuleIndex(self):
            return LALGGrammarParser.RULE_comandoComposto

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComandoComposto" ):
                listener.enterComandoComposto(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComandoComposto" ):
                listener.exitComandoComposto(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComandoComposto" ):
                return visitor.visitComandoComposto(self)
            else:
                return visitor.visitChildren(self)




    def comandoComposto(self):

        localctx = LALGGrammarParser.ComandoCompostoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_comandoComposto)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(LALGGrammarParser.T__4)
            self.state = 129
            self.comando()
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LALGGrammarParser.T__0:
                self.state = 130
                self.match(LALGGrammarParser.T__0)
                self.state = 131
                self.comando()
                self.state = 136
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 137
            self.match(LALGGrammarParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atribuicao(self):
            return self.getTypedRuleContext(LALGGrammarParser.AtribuicaoContext,0)


        def chamadaProcedimento(self):
            return self.getTypedRuleContext(LALGGrammarParser.ChamadaProcedimentoContext,0)


        def comandoComposto(self):
            return self.getTypedRuleContext(LALGGrammarParser.ComandoCompostoContext,0)


        def comandoCondicional(self):
            return self.getTypedRuleContext(LALGGrammarParser.ComandoCondicionalContext,0)


        def comandoRepetitivo(self):
            return self.getTypedRuleContext(LALGGrammarParser.ComandoRepetitivoContext,0)


        def getRuleIndex(self):
            return LALGGrammarParser.RULE_comando

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComando" ):
                listener.enterComando(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComando" ):
                listener.exitComando(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComando" ):
                return visitor.visitComando(self)
            else:
                return visitor.visitChildren(self)




    def comando(self):

        localctx = LALGGrammarParser.ComandoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_comando)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 139
                self.atribuicao()
                pass

            elif la_ == 2:
                self.state = 140
                self.chamadaProcedimento()
                pass

            elif la_ == 3:
                self.state = 141
                self.comandoComposto()
                pass

            elif la_ == 4:
                self.state = 142
                self.comandoCondicional()
                pass

            elif la_ == 5:
                self.state = 143
                self.comandoRepetitivo()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtribuicaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variavel(self):
            return self.getTypedRuleContext(LALGGrammarParser.VariavelContext,0)


        def ATRIBUICAO(self):
            return self.getToken(LALGGrammarParser.ATRIBUICAO, 0)

        def expressao(self):
            return self.getTypedRuleContext(LALGGrammarParser.ExpressaoContext,0)


        def getRuleIndex(self):
            return LALGGrammarParser.RULE_atribuicao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtribuicao" ):
                listener.enterAtribuicao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtribuicao" ):
                listener.exitAtribuicao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtribuicao" ):
                return visitor.visitAtribuicao(self)
            else:
                return visitor.visitChildren(self)




    def atribuicao(self):

        localctx = LALGGrammarParser.AtribuicaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_atribuicao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.variavel()
            self.state = 147
            self.match(LALGGrammarParser.ATRIBUICAO)
            self.state = 148
            self.expressao()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ChamadaProcedimentoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFICADOR(self):
            return self.getToken(LALGGrammarParser.IDENTIFICADOR, 0)

        def ABREPARENT(self):
            return self.getToken(LALGGrammarParser.ABREPARENT, 0)

